Add staging preview target

--- a/backend/.env.example
+++ b/backend/.env.example
@@ -34,6 +34,9 @@ DB_TABLE_PREFIX=
 # The primary site URL
 PRIMARY_SITE_URL=https://sf-next-craft-mono.vercel.app
 
+# The staging site URL
+STAGING_SITE_URL=https://sf-next-craft-mono.vercel.app
+
 # Path to web/uploads/ relative to index.php
 UPLOADS_BASE_PATH="./uploads"
 
