--- a/backend/.env.staging
+++ b/backend/.env.staging
@@ -34,6 +34,9 @@ DB_TABLE_PREFIX=
 # The primary site URL
 PRIMARY_SITE_URL=https://sf-next-craft-mono.vercel.app
 
+# The staging site URL
+STAGING_SITE_URL=https://sf-next-craft-mono.vercel.app
+
 # Path to web/uploads/ relative to index.php
 UPLOADS_BASE_PATH="./uploads"
 
@@ -48,6 +51,7 @@ MAILGUN_API_KEY="key-xxxxx"
 DEPLOY_SERVER="serverpilot@174.138.36.163"
 DEPLOY_REPOSITORY="git@github.com:simplefocus/sf-next-craft-mono.git"
 DEPLOY_PATH="/srv/users/serverpilot/apps/sf-next-craft-mono"
+DEPLOY_CRAFT_PATH="/backend"
 DEPLOY_HEALTH_CHECK="https://sf-next-craft-mono.simplefocus.dev/admin/login"
 DEPLOY_SLACK_WEBHOOK=""
 DEPLOY_DISCORD_WEBHOOK=""
