--- a/frontend/package.json
+++ b/frontend/package.json
@@ -27,6 +27,9 @@
     "next": "^10.0.1",
     "polished": "^4.0.4",
     "postcss": "^8.1.9",
+    "postcss-flexbugs-fixes": "^5.0.2",
+    "postcss-import": "^14.0.0",
+    "postcss-preset-env": "^6.7.0",
     "react": "^17.0.1",
     "react-dom": "^17.0.1",
     "tailwindcss": "^2.0.1"
